[package]
name = "linkding-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for interacting with the Linkding API"
repository = "https://github.com/zbrox/linkding-rs"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "linkding"

[features]
ffi = ["uniffi"]

[dependencies]
http = "1.1.0"
http-serde = "2.1.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.65"
uniffi = { version = "0.28.2", optional = true }
ureq = { version = "3.0.0-rc2", features = ["json"] }

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }
