[package]
name = "linkding-rs"
version = "0.3.0"
edition = "2021"
description = "A Rust library for interacting with the Linkding API"
repository = "https://github.com/zbrox/linkding-rs"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "linkding"

[features]
ffi = ["uniffi"]

[dependencies]
http-serde = "2.1.1"
reqwest = { version = "0.12.15", features = ["blocking", "multipart", "gzip", "json", "brotli", "deflate"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uniffi = { version = "0.29.2", optional = true }
url = "2.5.4"

[build-dependencies]
uniffi = { version = "0.29.2", features = ["build"] }
